--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,305 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    >
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__top">
+        <div class="header__logo">
+          <a href="#" class="header__logo-link">
+            <img
+              src="./images/Logo.png"
+              alt="logo"
+              class="header__logo-img"
+            >
+          </a>
+        </div>
+        <nav class="nav header__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a
+                href="https://google.com"
+                class="nav__link nav__link--active"
+              >
+                Home
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#mbis"
+                class="nav__link"
+              >
+                About us
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#team"
+                class="nav__link"
+              >
+                Contact
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="header__block">
+        <h1 class="header__heading heading">
+          We can <span class="header__help">help</span>.
+        </h1>
+
+        <p class="header__text">
+          Teaching independence to the lives of the people you love<br>
+          with reliable, individualized emotional and behavioral<br>
+          therapy.
+        </p>
+
+        <div class="header__button button">
+          Find help here
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="partners">
+        <div class="partners__partner">
+          <a href="https://google.com" class="partners__link">
+            <img
+              src="./images/Partners/Magellan-122.png"
+              alt="Magelan logo"
+              class="partners__logo"
+            >
+          </a>
+        </div>
+
+        <div class="partners__partner">
+          <a href="https://google.com" class="partners__link">
+            <img
+              src="./images/Partners/Kaiser Permanente-143.png"
+              alt="Kaiser permanente logo"
+              class="partners__logo"
+            >
+          </a>
+        </div>
+
+        <div class="partners__partner">
+          <a href="https://google.com" class="partners__link">
+            <img
+              src="./images/Partners/Anthem-158.png"
+              alt="Anthem logo"
+              class="partners__logo"
+            >
+          </a>
+        </div>
+
+        <div class="partners__partner">
+          <a href="https://google.com" class="partners__link">
+            <img
+              src="./images/Partners/North Bay Regional Center-189.png"
+              alt="North Bay logo"
+              class="partners__logo"
+            >
+          </a>
+        </div>
+
+        <div class="partners__partner">
+          <a href="https://google.com" class="partners__link">
+            <img
+              src="./images/Partners/Partnership Health Plan of CA-175.png"
+              alt="Partnership HealthPlan of California logo"
+              class="partners__logo"
+            >
+          </a>
+        </div>
+
+        <div class="partners__partner">
+          <a href="https://google.com" class="partners__link">
+            <img
+              src="./images/Partners/Aetna-140.png"
+              alt="Aetna logo"
+              class="partners__logo"
+            >
+          </a>
+        </div>
+      </section>
+
+      <section class="age">
+        <h1 class="age__heading">
+          Support For People Of All Walks of Life
+        </h1>
+
+        <p class="age__text">
+          Children as young as 2 years old may begin to develop behaviors
+          which need extra support and attention.
+        </p>
+
+        <img
+          src="./images/Age.png"
+          alt="bottom age image"
+          class="age__image"
+        >
+      </section>
+
+      <section class="mbis" id="mbis">
+        <h3 class="mbis__heading">
+          McGrew Behavior Services Helps...
+        </h3>
+
+        <p class="mbis__text">
+          Families, organizations and health care providers in Northern California.
+          Our knowledge and experience provide the specialized
+          support people need when overcoming behavioral challenges.
+        </p>
+
+        <div class="mbis__button button">
+          Contact us
+        </div>
+      </section>
+
+      <section class="home-support">
+        <h2 class="home-support__heading">
+          In Home Support
+        </h2>
+
+        <div class="home-support__slider">
+          <div class="home-suppport__slide">
+            <img
+              src="./images/support/1.png"
+              alt="In home support photo"
+              class="home-support__image">
+          </div>
+
+          <div class="home-suppport__slide">
+            <img
+              src="./images/support/2.png"
+              alt="In home support photo"
+              class="home-support__image"
+            >
+          </div>
+
+          <div class="home-suppport__slide">
+            <img
+              src="./images/support/3.png"
+              alt="In home support photo"
+              class="home-support__image"
+            >
+          </div>
+
+          <div class="home-suppport__slide">
+            <img
+              src="./images/support/4.png"
+              alt="In home support photo"
+              class="home-support__image"
+            >
+          </div>
+
+          <div class="home-suppport__slide">
+            <img
+              src="./images/support/5.png"
+              alt="In home support photo"
+              class="home-support__image"
+            >
+          </div>
+        </div>
+      </section>
+
+      <section class="team" id="team">
+        <img
+          src="./images/team.jpg"
+          alt="team photo"
+          class="team__photo"
+        >
+
+        <div class="team__info-block">
+          <p class="team__top-text">
+            Be a part of something bigger than yourself. Make a difference.
+          </p>
+
+          <h1 class="team__heading">
+            Join Our
+            <span class="team__heading--team">Team</span>.
+          </h1>
+
+          <p class="team__text">
+            We are always looking for highly motivated individuals
+            who aligned with our committment to making a difference in the lives of other people.
+            Whether you’re a BCBA or interested in ABA work we are interested in talking to you!
+          </p>
+
+          <div class="team__button button">
+            Find what's available
+          </div>
+        </div>
+      </section>
+
+      <div class="futer">
+        <nav class="futer__nav">
+          <ul class="futer__list">
+            <li class="futer__item">
+              <a href="" class="futer__link">Home</a>
+            </li>
+            <li class="futer__item">
+              <a href="" class="futer__link">About us</a>
+            </li>
+            <li class="futer__item">
+              <a href="" class="futer__link">Contact</a>
+            </li>
+            <li class="futer__item">
+              <a href="" class="futer__link">Careers</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="futer__soc">
+          <a href="" class="futer__soc-link">
+            <img
+              src="./images/Futer/I.png"
+              alt=""
+              class="futer__icon"
+            >
+          </a>
+          <a href="" class="futer__soc-link">
+            <img
+              src="./images/Futer/o.png"
+              alt=""
+              class="futer__icon">
+          </a>
+          <a href="" class="futer__soc-link">
+            <img
+              src="./images/Futer/m.png"
+              alt=""
+              class="futer__icon"
+            >
+          </a>
+        </div>
+
+        <p class="futer__adres">
+          120 Theresa Ave, American Canyon, CA 94503
+        </p>
+
+        <p class="futer__index">
+          707.561.0134
+        </p>
+
+        <p class="futer__email">
+          familyresources@mbisinc.com
+        </p>
+
+        <div class="futer__sub-futer">
+          <p class="futer__sub-futer__text">
+            Copyright Ⓒ 2017 McGrews Behavior Services All Rights Reserved
+          </p>
+        </div>
+      </div>
+    </main>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
